--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Programming Tree from PTT Soft_Job</title>
+    <title>國立勤益科技大學</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -21,13 +21,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h1>Re: [請益] 想當程式設計師的最低門檻</h1>
-                <h3>banyhong</h3>
-                <h3>Wed Dec  2 13:47:20 2015</h3>
-                <h3>批踢踢實業坊 看版Soft_Job</h3>
-                <p><a href="https://www.ptt.cc/bbs/Soft_Job/M.1449035242.A.AAC.html">原文連結</a></p>
-                <p><a href="https://github.com/robschmuecker">d3.js: Rob Schmuecker</a></p>
-                <p><a href="https://github.com/mbostock">d3.js: Mike Bostock</a></p>
+                <h1>想當程式設計師的最低門檻</h1>
+                <h3>吳世光</h3>
             </div>
         </div>
         <div class="row">
